# substrate-learn

./: .gitignore  Cargo.toml
pallets/StorageConsumer/: .gitignore  Cargo.toml
pallets/StorageConsumer/src/: lib.rs
pallets/StorageProvider/: .gitignore  Cargo.toml
pallets/StorageProvider/src/: lib.rs  storage.rs
pallets/ocw/: Cargo.toml
pallets/ocw/src/: lib.rs
pallets/template2/: Cargo.toml
pallets/template2/src/: lib.rs
pallets/useStorage/: Cargo.toml
pallets/useStorage/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
